--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,8 +28,13 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
-    <!--//STYLES-->
-    <!--//STYLES END-->
+    <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap-theme.css">
+    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/importer.css">
+    <!--STYLES END-->
   </head>
 
   <body>
@@ -86,7 +91,10 @@
 
     -->
 
-    <!--//SCRIPTS-->
-    <!--//SCRIPTS END-->
+    <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.min.js"></script>
+    <script src="/js/base.js"></script>
+    <!--SCRIPTS END-->
   </body>
 </html>
