--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,10 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/bootstrap-theme.css">
-    <link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/styles/bootstrap.css">
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
@@ -95,6 +92,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/angular.min.js"></script>
     <script src="/js/base.js"></script>
+    <script src="/js/morjs/test.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
