update commit of things tinkered

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,10 +28,8 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
-    <!--STYLES-->
-    <link rel="stylesheet" href="/styles/bootstrap.css">
-    <link rel="stylesheet" href="/styles/importer.css">
-    <!--STYLES END-->
+    <!--//STYLES-->
+    <!--//STYLES END-->
   </head>
 
   <body>
@@ -88,11 +86,7 @@
 
     -->
 
-    <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/angular.min.js"></script>
-    <script src="/js/base.js"></script>
-    <script src="/js/morjs/test.js"></script>
-    <!--SCRIPTS END-->
+    <!--//SCRIPTS-->
+    <!--//SCRIPTS END-->
   </body>
 </html>
